# 3DCGM-planets-starship

./: .gitignore  CMakeLists.txt  assignment_2.html  settings.toml
framework/: CMakeLists.txt
framework/include/framework/: file_picker.h  glm_ostream.h  imgui_helper.h  mesh.h  trackball.h  window.h
framework/src/: file_picker.cpp  imgui_helper.cpp  mesh.cpp  shader.cpp  trackball.cpp  window.cpp
resources/: BattleCruiser.mtl
shaders/: earth_frag.glsl  earth_tese.glsl  earth_vert.glsl  ico_frag.glsl  ico_tesc.glsl  ico_tese.glsl  ico_vert.glsl  skybox_vert.glsl  star_frag.glsl
shaders/battlecruiser/: glass_shader_frag.glsl  particle_frag.glsl  particle_vertex.glsl  shader_frag.glsl  shader_vert.glsl  skybox_frag.glsl
shaders/bodies/: earth_frag.glsl  earth_tese.glsl  ico_frag.glsl  ico_tesc.glsl  ico_tese.glsl  star_frag.glsl
src/: Body.cpp  Body.h  Earth.h  Star.h  application.cpp  main.cpp  mesh.cpp
src/core/: ShadowMap.h  config.h  mesh.h
src/scene/: Skybox.h
src/scene/battlecruiser/: Battlecruiser.cpp  Battlecruiser.h  ParticleSystem.cpp  ParticleSystem.h
src/scene/bodies/: Body.h  Earth.h  PlanetSystem.h  Star.h  ico_mesh.h
src/scene/camera/: BattlecruiserCamera.h  Camera.h  FreeCamera.h
src/utils/: Battlecruiser.cpp  Battlecruiser.h  ParticleSystem.cpp  ParticleSystem.h  SkyboxSystem.cpp  SkyboxSystem.h
